<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dig Sig</string>
    <string name="listFilesActivityName">Please select a file</string>
    <string name="listIdentitiesActivityName">Please select digital identity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="installIdentity">Install Identity</string>
    <string name="viewCommunitySigStatus">Community Signature Status</string>
    <string name="showTestingOptions">Show Testing Options</string>
    <string name="testSigning">Test Signing</string>
    <string name="testXmlSigning">Test XML Signing (doc in intent)</string>
    <string name="testXmlSigningUrl">Test XML Signing (doc url)</string>
    <string name="testDefaultUrlLabel">URL of the ducument to sign:</string>
    <string name="testDefaultUrlValue">http://research.setcce.si:8081/rest/xmldocs/734562312888329?sig=C9FD388E45C7CAD597ACF07479D81A5EF4EE8582FB28967659B499D0AB0F2CFAFD32B8D93A45DBFA9163DBD4A2030B58FF07B3C27D829C684E553EF2313C3548AF6A0EE1899D3D2F28011617479B13DC7B7A2D26A7FE77C6B5D772224BB2612834ED1D93E2659E3381D7BE4E58338E3A5B03D7E1119C6AED82C6B44CEE2754ABADCBE84F3A79D3F113704EC25D8EE4D33A5826C21A657F74FA609B83C4057D17E67032D1D28B11AEBB8A3FD0462A39DB93ED46912D827B34A9AF95B6FE4F170178AAD7F6D212FA0E6DF6EE115BDADFA4E270F52971177280D58CA2E4186D13CCF9FA19017B625B52B839800B4DEEBF1E93937E559D90E79CA98C5D70CA00FE41</string>
    <!--
    <string name="testDefaultUrlValue">http://192.168.1.92/tmp/societies/doc.xml</string>
    <string name="testDefaultUrlValue">http://192.168.1.92:8080/rest/xmldocs/foo.xml?sig=5F068B13A9184C4773809426EAB845A99A2258724887CA67475B263283E92B7D680B39865B1622F066FB03283772AB6C69347D1400D8F8CEE5CCC4F5DE80FD5F3B8C3272B5B7DC08EBB3BC45D11F66590DA25742193BCEF20619DCF0D8B33812424153BCFDBCDE081B48867F90BB544F593EEA9BA825C425A4A6D2650E0A17C6</string>
    -->
    <string name="testVerification">Test Verification</string>
    <string name="isRequestingToSign">is requesting to sign a document. Allow?</string>
    <string name="unknownApp">Unknown app</string>
    <string name="title_activity_community_sig_status">CommunitySigStatusActivity</string>
    <string name="action_clear">Clear document list</string>
    <string name="collaborativeSigningNotStartedYet">Collaborative signing not started yet.</string>
    <string name="signatureThresholdReached">Signature threshold reached</string>
    <string name="signatureThresholdNotReached">Signature threshold not reached yet</string>
    <string name="signedBy">Signed by</string>
    <string name="parties">parties</string>
    <string name="unknown">\?</string>
    <string name="required">Required:</string>
    <string name="currentSigners">Current signers:</string>
    <string name="fetchingStatus">Fetching status</string>
    <string name="errorOccurred">Could not get valid data from server</string>
    
</resources>
