<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
<Button android:text="@string/installIdentity" android:id="@+id/buttonMainInstallIdentity" android:layout_height="wrap_content" android:layout_width="match_parent"></Button>
<Button android:text="@string/testSigning" android:id="@+id/buttonMainSign" android:layout_height="wrap_content" android:layout_width="match_parent"></Button>
<Button android:text="@string/testXmlSigning" android:id="@+id/buttonMainXmlSign" android:layout_height="wrap_content" android:layout_width="match_parent"></Button>

<TextView
    android:id="@+id/textViewMainSignUrl"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/testDefaultUrlLabel" />
<EditText
    android:id="@+id/editTextMainSignUrl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textUri"
    android:text="@string/testDefaultUrlValue"
    >
    <requestFocus />
</EditText>

<Button android:text="@string/testXmlSigningUrl" android:id="@+id/buttonMainXmlSignUrl" android:layout_height="wrap_content" android:layout_width="match_parent"></Button>
<Button android:text="@string/testVerification" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/buttonMainVerify"></Button>

</LinearLayout>
